# pdfme

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  borrar.py  example.json  setup.cfg  setup.py  test.py  tutorial.py
docs/: conf.py  examples.rst  index.rst  modules.rst  tutorial.rst
docs/modules/: base.rst  color.rst  content.rst  document.rst  encoders.rst  fonts.rst  image.rst  page.rst  parser.rst  pdf.rst  standard_fonts.rst  table.rst  text.rst  utils.rst
pdfme/: __init__.py  base.py  base_fonts.py  color.py  content.py  content1.py  css.py  document.py  encoders.py  fonts.py  graphics.py  html.py  image.py  objects.py  page.py  page_sizes.py  parser.py  pdf.py  pdfbase.py  span.py  standard_fonts.py  table.py  text.py  text1.py  types.py  utils.py
pdfme/core/: base.py  font.py  page.py  resource.py
tests/: __init__.py  graphics.py  group_element.py  running_section_per_page.py  test.py  test_base.py  test_content.py  test_css.py  test_table.py  test_text.py  utils.py
