[metadata]
name = pdfme
version = 0.1.0
author = Andrés Felipe Sierra Parra
author_email = cepfelo@gmail.com
description = Create PDFs easily
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aFelipeSP/pdfme
project_urls =
    Bug Tracker = https://github.com/aFelipeSP/pdfme/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Multimedia :: Graphics
[options]
packages = find:
python_requires = >=3.4
